# rayrun2019

./: .gitignore  .gitmodules  CMakeLists.txt  make_sln_vs2017.bat  make_sln_vs2019.bat  premake5.lua
mysrc/: .clang-format  .editorconfig
mysrc/benchmark/: benchmark_vector3f.cpp
mysrc/impl/: aabb.h  binnedBVH.cpp  binnedBVH.h  hitInfo.h  intersection.h  myimpl.cpp  rayInternal.h  scene.cpp  scene.h  vector3f.h  visualDebugger.cpp  visualDebugger.h
src/: rayrun.hpp
